--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,900;1,300&display=swap");
 
-/* TYPOGRAPHY */
+/* GENERAL */
 
 :root {
   --dark-blue: #1f2937; /* bg color (hero & footer), info header text, quote text */
@@ -15,6 +15,50 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
+  max-width: 130rem;
+}
+
+.container {
+  max-width: 90rem;
+  padding: 0 3.2rem;
+  margin: 0 auto;
+  background-color: transparent;
+}
+
+.flex {
+  display: flex;
+}
+
+/* HEADER */
+.header {
+  background-color: var(--dark-blue);
+  padding: 0 20rem;
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+  font-size: 2.4rem;
+  color: var(--white);
+}
+
+.nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+.nav a {
+  color: var(--gray);
+  text-decoration: none;
+}
+
+/* HERO */
+.header-primary {
+  font-size: 4.8rem;
 }
