--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
 :root {
   --dark-blue: #1f2937; /* bg color (hero & footer), info header text, quote text */
-  --white: #f9faf8; /* hero main text, header logo text color */
-  --gray: #e5e7eb; /* hero secondary text, header link text color, quote section bg color */
+  --light-gray: #e5e7eb; /* hero main text, header logo text color */
+  --gray: #6d747d; /* hero secondary text, header link text color, quote section bg color */
   --blue: #3882f6; /* button color, cta bg color */
 }
 
@@ -16,35 +16,33 @@
 }
 
 html {
-  font-size: 62.5%;
+  /* font-size: 62.5%; */
 }
 
 body {
   font-family: "Roboto", sans-serif;
-  max-width: 130rem;
+  max-width: 1440px;
 }
 
 .container {
-  max-width: 90rem;
-  padding: 0 3.2rem;
+  max-width: 1000px;
   margin: 0 auto;
-  background-color: transparent;
-}
-
-.flex {
-  display: flex;
 }
 
 /* HEADER */
 .header {
   background-color: var(--dark-blue);
-  padding: 0 20rem;
+}
+
+.header-content {
+  height: 65px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .logo {
-  font-size: 2.4rem;
-  color: var(--white);
+  font-size: 24px;
+  color: var(--light-gray);
 }
 
 .nav {
@@ -52,13 +50,170 @@ body {
   padding: 0;
   margin: 0;
   display: flex;
+  gap: 30px;
 }
 .nav a {
   color: var(--gray);
   text-decoration: none;
+  font-size: 18px;
 }
 
 /* HERO */
+.hero {
+  background-color: var(--dark-blue);
+}
+
+.hero-content {
+  height: 465px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
 .header-primary {
-  font-size: 4.8rem;
+  font-size: 48px;
+  color: var(--light-gray);
+  line-height: 1;
+  margin-bottom: 10px;
+}
+
+.subtitle {
+  color: var(--light-gray);
+  line-height: 1.8;
+  letter-spacing: 0.8px;
+  margin-bottom: 15px;
+}
+
+.btn {
+  display: inline-block;
+  border: 2px solid var(--blue);
+  padding: 7px 30px;
+  border-radius: 7px;
+  text-decoration: none;
+  transition: all 0.2s;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.btn-fill {
+  background-color: var(--blue);
+  color: var(--light-gray);
+}
+
+.btn-fill:hover {
+  background-color: var(--light-gray);
+  color: var(--blue);
+  border: 2px solid var(--light-gray);
+}
+.btn-outline {
+  background-color: transparent;
+  color: var(--light-gray);
+  border: 2px solid lightgray;
+}
+
+.btn-outline:hover {
+  background-color: var(--light-gray);
+  color: var(--blue);
+}
+
+.img-box {
+  background-color: var(--gray);
+  flex: 0 0 auto;
+  display: flex;
+  height: 230px;
+  width: 520px;
+  align-items: center;
+  color: var(--light-gray);
+}
+
+.img-box h4 {
+  width: 100%;
+  font-size: 25px;
+  text-align: center;
+}
+
+/* INFO */
+.info-content {
+  text-align: center;
+  padding: 50px 0;
+}
+.header-secondary {
+  font-size: 36px;
+  font-weight: 900;
+  color: var(--dark-blue);
+  line-height: 1;
+  margin-bottom: 50px;
+}
+.info-row {
+  margin: 0 auto;
+  display: flex;
+  gap: 45px;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.info-box {
+  width: 160px;
+}
+
+.info-img {
+  background-color: var(--light-gray);
+  height: 160px;
+  width: 160px;
+  border: 4px solid var(--blue);
+  border-radius: 7px;
+  margin-bottom: 5px;
+}
+
+.info-text {
+  color: var(--gray);
+}
+
+/* TESTIMONIAL */
+.testimonial {
+  background-color: var(--light-gray);
+}
+
+.testimonial-content {
+  display: flex;
+  flex-direction: column;
+  padding: 100px;
+}
+
+.testimonial-quote {
+  font-size: 36px;
+  font-size: 500;
+  font-style: italic;
+}
+
+.testimonial-author {
+  font-size: 20px;
+  font-weight: 900;
+  text-align: end;
+}
+
+/* CTA */
+.cta-box {
+  display: flex;
+  padding: 50px 0;
+  margin: 100px auto;
+  justify-content: space-evenly;
+  background-color: var(--blue);
+  border-radius: 7px;
+}
+
+.cta-text {
+  color: var(--light-gray);
+}
+
+/* FOOTER */
+.footer {
+  background-color: var(--dark-blue);
+  color: var(--light-gray);
+  text-align: center;
+}
+
+.copyright {
+  padding: 30px 0;
 }
